--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@angular/pwa": "^0.803.23",
     "@angular/router": "^8.2.14",
     "@angular/service-worker": "^8.2.14",
+    "@auth0/angular-jwt": "^4.0.0",
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/in-app-browser": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
     "@ionic/angular": "^5.0.6",
     "@ionic/storage": "^2.1.3",
+    "angular-jwt": "github:auth0/angular-jwt",
     "cordova-android": "^8.1.0",
     "cordova-ios": "^5.1.1",
     "cordova-plugin-device": "^2.0.3",
