--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "rxjs": "^6.5.4",
     "sw-toolbox": "3.6.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@auth0/angular-jwt": "^4.0.0",
+    "angular-jwt": "github:auth0/angular-jwt"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.803.23",
